softened icons, added/removed some search options, added links to schools/users profile

--- a/app/assets/stylesheets/base/_reset.scss
+++ b/app/assets/stylesheets/base/_reset.scss
@@ -23,6 +23,11 @@ html, body {
 
 a {
   text-decoration: none;
+
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
 }
 
 hr {
