--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -8,8 +8,8 @@
 					<h1 class="header-title">Cadastrar <span>unidade</span></h1>
 
 					<div class="actions">
-		      	<%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Finalizar<% end %>
-		        <%= link_to schools_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
+		      	<%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">done</span>Finalizar<% end %>
+		        <%= link_to schools_path, class: "btn-cancel icon" do %><span class="material-symbols-outlined md-16">undo</span>Voltar<% end %>
 		      </div>
 				</header>
 			</div>
