--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,8 +10,8 @@
 					<h1 class="header-title">Lista de <span>usuários</span></h1>
 
 					<div class="right-content">
-						<%= link_to "#", alt: "Filtrar dados", title: "Filtrar dados", class: "btn icon enable-filters" do %><span class="material-icons md-16 md-light">search</span>Filtro avançado<% end %>
-						<%= link_to new_user_path, class: "btn-success icon" do %><span class="material-icons md-16 md-light">add</span>Cadastrar usuário<% end %>
+						<%= link_to "#", alt: "Filtrar dados", title: "Filtrar dados", class: "btn icon enable-filters" do %><span class="material-symbols-outlined md-16 md-light">search</span>Filtro avançado<% end %>
+						<%= link_to new_user_path, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">add</span>Cadastrar usuário<% end %>
 					</div>
 				</header>
 			</div>
@@ -76,9 +76,9 @@
 									<div class="table-col table-col-45" data-label="E-mail"><%= u.email %></div>
 									<div class="table-col table-col-10">
 										<div class="options">
-											<%= link_to user_path(u), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-icons md-20">visibility</span><% end %>
-						          <%= link_to edit_user_path(u), alt: "Editar", title: "Editar", class: "btn-icon" do %><span class="material-icons md-20">edit</span><% end %>
-						          <%= link_to destroy_user_path(u), alt: "Excluir", title: "Excluir", method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-icon" do %><span class="material-icons md-20">delete</span><% end %>
+											<%= link_to user_path(u), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
+						          <%= link_to edit_user_path(u), alt: "Editar", title: "Editar", class: "btn-icon" do %><span class="material-symbols-outlined md-20">edit</span><% end %>
+						          <%= link_to destroy_user_path(u), alt: "Excluir", title: "Excluir", method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-icon" do %><span class="material-symbols-outlined md-20">delete</span><% end %>
 										</div>
 									</div>
 								</li>
