--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <%= favicon_link_tag asset_path('logo-dcpeoti.png') %>
   </head>
 
@@ -22,7 +23,7 @@
     <%= render 'shared/loading' %>
 
     <div class="main">
-      <span class="menu-icon material-icons md-20">menu</span>
+      <span class="menu-icon material-symbols-outlined md-20">menu</span>
 
       <%= yield %>
     </div>
