--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,10 +14,10 @@
 							<% grid_view = params[:view] != "list" ? "active" : "" %>
 							<% list_view = params[:view] == "list" ? "active" : "" %>
 
-							<%= link_to request.params.merge(view: "grid"), alt: "Modo de exibição: quadros", title: "Modo de exibição: quadros", class: "as-grid btn-icon #{grid_view}" do %><span class="material-icons md-20">grid_view</span><% end %>
-							<%= link_to request.params.merge(view: "list"), alt: "Modo de exibição: lista", title: "Modo de exibição: lista", class: "as-list btn-icon #{list_view}" do %><span class="material-icons md-20">table_rows</span><% end %>
-							<%= link_to "#", alt: "Filtrar dados", title: "Filtrar dados", class: "btn icon enable-filters" do %><span class="material-icons md-16 md-light">search</span>Filtro avançado<% end %>
-							<%= link_to new_order_path, class: "btn-success icon" do %><span class="material-icons md-16 md-light">add</span>Abrir OS<% end %>
+							<%= link_to request.params.merge(view: "grid"), alt: "Modo de exibição: quadros", title: "Modo de exibição: quadros", class: "as-grid btn-icon #{grid_view}" do %><span class="material-symbols-outlined md-20">grid_view</span><% end %>
+							<%= link_to request.params.merge(view: "list"), alt: "Modo de exibição: lista", title: "Modo de exibição: lista", class: "as-list btn-icon #{list_view}" do %><span class="material-symbols-outlined md-20">table_rows</span><% end %>
+							<%= link_to "#", alt: "Mostrar opções de pesquisa", title: "Mostrar opções de pesquisa", class: "btn-icon enable-filters" do %><span class="material-symbols-outlined md-16">search</span><% end %>
+							<%= link_to new_order_path, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">add</span>Abrir OS<% end %>
 						</div>
 					</div>
 				</header>
@@ -35,17 +35,38 @@
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="search">
+						<%= search_field_tag :id, params[:id], placeholder: "Número da OS" %>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12">
 					<div class="search" id="autocomplete-patrimony">
 						<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio/Nº série", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, type: "search", title: "Digite S/P para pesquisar OS sem patrimônio" %>
 					</div>
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="search" id="autocomplete-spot">
-						<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
-						<% list_spots.each do |spot| %>
-					    <%= content_tag :div, spot, class: "search_list list_spots" %>
-						<% end %>
+					<div class="search" id="autocomplete-name">
+						<%= autocomplete_field_tag :name, params[:name], autocomplete_school_name_schools_path, placeholder: "Nome da unidade", append_to: "#autocomplete-name",'data-showNoMatches' => false %>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="custom-select">
+						<%= select_tag :status, options_for_select(list_status, params[:status]), include_blank: "Status..."  %>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="custom-select">
+						<%= select_tag :o_type, options_for_select(list_types, params[:o_type]), include_blank: "Tipo de OS..."  %>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-sm-12">
+					<div class="custom-select">
+						<%= select_tag :technician, options_for_select(@technicians, params[:technician]), include_blank: "Técnico responsável..." %>
 					</div>
 				</div>
 
@@ -68,32 +89,11 @@
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="custom-select">
-						<%= select_tag :status, options_for_select(list_status, params[:status]), include_blank: "Status..."  %>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="custom-select">
-						<%= select_tag :technician, options_for_select(@technicians, params[:technician]), include_blank: "Técnico responsável..." %>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="custom-select">
-						<%= select_tag :o_type, options_for_select(list_types, params[:o_type]), include_blank: "Tipo de OS..."  %>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="search">
-						<%= search_field_tag :requester, params[:requester], placeholder: "Solicitante" %>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-sm-12">
-					<div class="search">
-						<%= search_field_tag :school, params[:school], placeholder: "Unidade" %>
+					<div class="search" id="autocomplete-spot">
+						<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
+						<% list_spots.each do |spot| %>
+					    <%= content_tag :div, spot, class: "search_list list_spots" %>
+						<% end %>
 					</div>
 				</div>
 
@@ -125,8 +125,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="hidden-scrollbar <%= params[:view].presence %>">
-						<button class="prev-btn" title="Mover para esquerda"><span class="material-icons">keyboard_double_arrow_left</span></button>
-						<button class="next-btn" title="Mover para direita"><span class="material-icons">keyboard_double_arrow_right</span></button>
+						<button class="prev-btn" title="Mover para esquerda"><span class="material-symbols-outlined">keyboard_double_arrow_left</span></button>
+						<button class="next-btn" title="Mover para direita"><span class="material-symbols-outlined">keyboard_double_arrow_right</span></button>
 						<section class="container-body <%= params[:view].presence %>">
 							<% @orders.group_by(&:status).each do |status, orders| %>
 								<%= render "order_card", orders: orders, status: status.downcase %>
