--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -10,9 +10,9 @@
           <h1 class="header-title">Editar dados da <span>unidade</span></h1>
 
           <div class="actions">
-            <%= link_to edit_user_password_path(@user), class: "btn-warning icon" do %><span class="material-icons md-16">key</span>Trocar senha<% end %>
-            <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
-            <%= link_to :back, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
+            <%= link_to edit_user_password_path(@user), class: "btn-warning icon" do %><span class="material-symbols-outlined md-16">key</span>Trocar senha<% end %>
+            <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">done</span>Salvar<% end %>
+            <%= link_to :back, class: "btn-cancel icon" do %><span class="material-symbols-outlined md-16">undo</span>Voltar<% end %>
           </div>
         </header>
       </div>
