--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,10 +10,10 @@
 					<h1 class="header-title">Perfil de <span>usuário</span></h1>
 
 					<div class="actions">
-						<%= link_to edit_user_path(@user), class: "btn-info icon" do %><span class="material-icons md-16 md-light">edit</span>Editar dados<% end %>
-						<%= link_to edit_user_password_path(@user), class: "btn-warning icon" do %><span class="material-icons md-16">key</span>Trocar senha<% end %>
-						<%= link_to :back, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
-						<%= link_to destroy_user_path(@user), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert icon" do %><span class="material-icons md-16 md-light">close</span>Excluir conta<% end %>
+						<%= link_to edit_user_path(@user), class: "btn-info icon" do %><span class="material-symbols-outlined md-16 md-light">edit</span>Editar dados<% end %>
+						<%= link_to edit_user_password_path(@user), class: "btn-warning icon" do %><span class="material-symbols-outlined md-16">key</span>Trocar senha<% end %>
+						<%= link_to :back, class: "btn-cancel icon" do %><span class="material-symbols-outlined md-16">undo</span>Voltar<% end %>
+						<%= link_to destroy_user_path(@user), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert icon" do %><span class="material-symbols-outlined md-16 md-light">close</span>Excluir conta<% end %>
 		      </div>
 				</header>
 			</div>
@@ -53,10 +53,10 @@
 												<li class="table-header">
 													<div class="table-col table-col-5">#</div>
 													<div class="table-col table-col-10">Solicitante</div>
-													<div class="table-col table-col-10">Status</div>
+													<div class="table-col table-col-15">Status</div>
 													<div class="table-col table-col-10">Tipo</div>
-													<div class="table-col table-col-40">Defeito apresentado</div>
-													<div class="table-col table-col-15">Atualizada em</div>
+													<div class="table-col table-col-30">Defeito apresentado</div>
+													<div class="table-col table-col-20">Atualizada em</div>
 													<div class="table-col table-col-10"><div class="options">Opções</div></div>
 												</li>
 
@@ -64,20 +64,23 @@
 													<li class="table-row">
 														<div class="table-col table-col-5" data-label="#"><strong><%= o.id.to_s.rjust(3, '0') %></strong></div>
 														<div class="table-col table-col-10" data-label="Solicitante"><%= o.requester %></div>
-														<div class="table-col table-col-10" data-label="Status" data-status="<%= get_status(o.status) %>"><%= o.status %></div>
+														<div class="table-col table-col-15" data-label="Status" data-status="<%= get_status(o.status) %>"><%= o.status %></div>
 														<div class="table-col table-col-10" data-label="Tipo"><%= o.o_type || " - " %></div>
-														<div class="table-col table-col-40" data-label="Defeito apresentado">
+														<div class="table-col table-col-30" data-label="Defeito apresentado">
 															<div class="order-defect limited-text">
 																<%= o.defect.to_s.html_safe %>
 															</div>
 														</div>
-														<div class="table-col table-col-15" data-label="Atualizada em">
-															<%= "#{o.updated_at.strftime("%d/%m/%Y")} por #{order_creator(o.updated_by)}" %><br />
-															<%= o.updated_at.strftime("%H:%M") %>
+														<div class="table-col table-col-20" data-label="Atualizada em">
+															<%= content_tag :span do %>
+																<%= "#{o.updated_at.strftime("%d/%m/%Y")} por " %>
+																<%= link_to order_creator(o.updated_by), is_school?(User.find(o.updated_by)) ? school_path(o.school_id) : user_path(o.updated_by), class: "link"  %><br />
+																<%= o.updated_at.strftime("%H:%M") %>
+															<% end %>
 														</div>
 														<div class="table-col table-col-10" data-label="Opções">
 															<div class="options">
-											          <%= link_to order_path(o), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-icons md-20">visibility</span><% end %>
+											          <%= link_to order_path(o), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
 															</div>
 														</div>
 													</li>
