--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -34,6 +34,12 @@
 				span {
 					font-weight: 600;
 				}
+
+				i {
+					display: block;
+					text-transform: none;
+					font-size: .5em;
+				}
 			}
 
 			.right-content {
