--- a/app/assets/stylesheets/core/_table.scss
+++ b/app/assets/stylesheets/core/_table.scss
@@ -6,12 +6,14 @@
     align-items: center;
     margin-bottom: 25px;
   }
+
   .table-header {
     background-color: $dark-blue;
     font-size: 1em;
     text-transform: uppercase;
     letter-spacing: 0.03em;
-    padding: 15px 30px;
+    padding: 15px 25px;
+    gap: 0 15px;
 
     .active {
       font-weight: 700;
@@ -30,10 +32,12 @@
       color: $primary-color;
     }
   }
+
   .table-row {
     background-color: #ffffff;
     @include prefix(box-shadow, 0px 0px 9px 0px rgba(0,0,0,0.1));
     padding: 25px 30px;
+    gap: 0 15px;
 
     div[data-label="Status"] {
       font-weight: 600;
@@ -114,10 +118,11 @@
 
     .table-col {
       flex-basis: 100%;
-      
     }
+
     .table-col {
       padding: 10px 0;
+
       &:before {
         color: #6C7A89;
         padding-right: 10px;
@@ -125,6 +130,11 @@
         flex-basis: 25%;
         text-align: right;
       }
+    }
+
+    .options {
+      width: auto;
+      justify-content: flex-start;
     }
   }
 
