--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col">
 				<header class="container-header">
-					<h1 class="header-title">Ordens de <span>serviço</span></h1>
+					<h1 class="header-title">Ordens de <span>serviço</span> <%= content_tag :i, registered_data(@orders) %></h1>
 
 					<div class="right-content">
 						<div class="action-buttons">
