--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col">
 				<header class="container-header">
-					<h1 class="header-title">Lista de <span>equipamentos</span></h1>
+					<h1 class="header-title">Lista de <span>equipamentos</span> <%= content_tag :i, registered_data(@stuffs) %></h1>
 
 					<div class="right-content">
 						<%= link_to "#", alt: "Mostrar opções de pesquisa", title: "Mostrar opções de pesquisa", class: "btn-icon enable-filters" do %><span class="material-symbols-outlined md-16">search</span><% end %>
@@ -100,7 +100,7 @@
 									</div>
 									<div class="table-col table-col-15" data-label="Marca/Modelo"><%= s.brand %></div>
 									<%= content_tag :div, s.school.name, class: "table-col table-col-40", "data-label": "Unidade" unless is_school?(current_user) %>
-									<div class="table-col table-col-10">
+									<div class="table-col table-col-10" data-label="Opções">
 										<div class="options">
 											<%= link_to stuff_path(s), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
 						          <%= link_to edit_stuff_path(s), alt: "Editar", title: "Editar", class: "btn-icon" do %><span class="material-symbols-outlined md-20">edit</span><% end %>
