fixed problem when filtering by status

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -27,6 +27,7 @@
 			overflow: hidden;
     	height: 70vh;
     	position: relative;
+    	border-radius: 5px;
 
     	&.list {
     		overflow: initial;
