removed limited text when printing an order

--- a/app/views/orders/print_order.html.erb
+++ b/app/views/orders/print_order.html.erb
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-12 block-col">
             <h3>Defeito/problema apresentado</h3>
-            <div class="limited-text html-safe"><%= @order.defect.to_s.html_safe %></div>
+            <div class="html-safe"><%= @order.defect.to_s.html_safe %></div>
           </div>
         </div>
 
