--- a/app/assets/stylesheets/core/_chosen.scss
+++ b/app/assets/stylesheets/core/_chosen.scss
@@ -55,6 +55,14 @@
     border: none;
     @include prefix(box-shadow, 0 10px 10px rgba(0, 0, 0, 0.1));
 
+    &:after {
+      position: absolute;
+      content: "";
+      bottom: -40px;
+      height: 40px;
+      width: 1px;
+    }
+
     .chosen-search {
       padding: 5px;
 
