--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -25,14 +25,16 @@
       </div>
 
       <%= simple_form_for @user, url: edit_user_password_path, html: { class: "form" } do |f| %>
-        <div class="row">
-          <div class="col-12 col-sm-6">
-            <div class="input">
-              <%= content_tag :label, "Senha atual", for: "current_password", class: "form-label" %>
-              <%= password_field_tag :current_password, params[:current_password], id: "current_password", placeholder: "**********" %>
+        <% unless is_admin?(current_user) %>
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <div class="input">
+                <%= content_tag :label, "Senha atual", for: "current_password", class: "form-label" %>
+                <%= password_field_tag :current_password, params[:current_password], id: "current_password", placeholder: "**********" %>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
 
         <div class="row">
           <div class="col-12 col-sm-6">
