--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,7 @@
 
     <p>Entre em contato com a gente.</p>
 
-    <h2 class="m-t-25"><strong>(12) 3625-5113 / 3632-1992</strong></h2>
+    <h2 class="m-t-25"><strong>(12) 3621-4544 | Ramal 231</strong><br>ou através do e-mail divisao.ti@educacaotaubate.sp.gov.br</h2>
 
     <div class="actions m-t-25">
       <%= link_to "Entrar com a minha conta", new_session_path(resource_name), class: "link m-t-25" %>
