--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -25,6 +25,12 @@
 		      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin?(current_user) %>
 
 		      	<div class="row">
+		      		<%= content_tag :div, "", class: "col-12 col-lg-4 col-md-5 col-sm-6" do %>
+	      				<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "chosen-select" } %>
+	    				<% end if is_admin?(current_user) %>
+		      	</div>
+		      	
+		      	<div class="row">
 							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
 		        		<div class="input string" id="autocomplete-patrimony">
 		        			<label for="stuff[patrimony]" class="form-label">Patrimônio</label>
